@@ -17,3 +17,10 @@
 {/foreach}
 	</ul>
 </div>
+
+<div id="to-top" style="display:none" onclick="Todoyu.Ui.scrollToTop()">
+	<h1>
+		<span class="label">Top</span>
+		<span class="arrow"></span>
+	</h1>
+</div>
